Added linting and some quality control checks

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.8.0",
+    "eslint-plugin-security": "^1.4.0"
   },
   "scripts": {
-    "build": "babel src --out-dir lib --copy-files"
+    "build": "babel src --out-dir lib --copy-files",
+    "lint": "eslint src/**/*"
   }
 }
