Add auto-migrations. Begin work on the authentication routes. [1/4] done

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
     "plugins": ["transform-strict-mode"],
-    "presets": ["env"]
+    "presets": [
+        ["env", {
+          "targets": {
+            "node": "8.6"
+          }
+        }]
+      ]
 }
