--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
+    "apidoc": "^0.17.6",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-env": "^1.6.0",
@@ -24,6 +25,7 @@
     "build": "babel src --out-dir lib --copy-files",
     "lint": "eslint src/**/*",
     "launch": "node ./lib/main.js",
-    "start": "yarn build && yarn launch"
+    "start": "yarn build && yarn launch",
+    "docs": "apidoc -i src/api/routes -o docs/"
   }
 }
