--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "scripts": {
     "knex:ml":"knex --knexfile=src/knexfile.js migrate:latest",
     "knex:rb":"knex --knexfile=src/knexfile.js migrate:rollback",
+    "knex:m-make":"knex --knexfile=src/knexfile.js migrate:make",
+    "knex:s-make":"knex --knexfile=src/knexfile.js seed:make",
+    "knex:seed":"knex --knexfile=src/knexfile.js seed:run",
     "build": "babel src --out-dir lib --copy-files",
     "lint": "eslint src/**/*",
     "launch": "node ./lib/server.js",
