--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "knex:m-make": "knex --knexfile=src/knexfile.js migrate:make",
     "knex:s-make": "knex --knexfile=src/knexfile.js seed:make",
     "knex:seed": "knex --knexfile=src/knexfile.js seed:run",
-    "build": "babel src --out-dir lib --copy-files",
+    "build": "rm -rf lib && babel src --out-dir lib --copy-files",
     "lint": "eslint src/**/*",
     "launch": "node ./lib/server.js",
     "start": "yarn build && yarn launch",
